# wetris

./: .clang-format  .gitmodules  CMakeLists.txt  LICENSE.md  README.md
include/tetris/: font.h  font_store.h  game.h  piece.h  sfx_store.h  tetrion.h  ui.h  utils.h
include/wetris/: direction.h  input.h  tetrion.h  text.h  tileset.h  timer.h
src/: CMakeLists.txt  font.c  font_store.c  game.c  input.c  main.c  piece.c  sfx_store.c  tetrion.c  text.c  tileset.c  timer.c  ui.c  utils.c
